fixed comment layout issues

--- a/components/comments/Comment.module.css
+++ b/components/comments/Comment.module.css
@@ -6,11 +6,13 @@
 }
 
 .dp {
-  margin-top: 0.2rem;
   aspect-ratio: 1;
+  width: 50px;
+  height: 50px;
   overflow: hidden;
   border-radius: 100vw;
   cursor: pointer;
+  flex-shrink: 0;
 }
 
 .comment {
@@ -23,7 +25,7 @@
   flex-grow: 1;
   gap: 0.3rem;
   flex-direction: column;
-  width: 80%;
+  flex-grow: 1;
 }
 .description {
   display: flex;
