--- a/components/navbar/Hamburger.module.css
+++ b/components/navbar/Hamburger.module.css
@@ -7,7 +7,15 @@
 .menu-wrapper {
   align-self: center;
 }
-
+.menu-bg {
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: aliceblue;
+}
 .btn-menu-wrapper {
   height: 32px;
   width: 32px;
